--- a/index.html
+++ b/index.html
@@ -5,39 +5,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Processzorok</title>
     <style>
+        body {
+            background-image: linear-gradient(to right, hsl(0, 0%, 90%), hsl(0, 0%, 60%));
+        }
+        * {
+            font-family: Verdana, sans-serif;
+        }
+        #main{
+            text-align: center;
+            color: white;
+            text-shadow: 0px 0px 10px black;
+        }
+        #felsorolas {
+            margin: auto;
+            background-color: darkgray;
+            font-size: 110%;
+            border-left: 5px solid rgb(87, 87, 87);
+            width: 40%;
+            border-radius: 5px;
+            box-shadow: -2px 2px 5px;
+        }
+        #felsorolas ul {
+            padding-top: 25px;
+            padding-bottom: 25px;
+        }
         .Intel {
             background-color: rgb(0, 132, 255);
             color: rgb(18, 2, 241);
-            font-size: 20px;
+            font-size: 110%;
             margin-left: 10%;
             margin-right: 10%;
             border: 5px solid blue;
+            border-radius: 15px;
+            box-shadow: -2px 2px 5px;
+            transition: background-color, 0.5s;
+        }
+        .Intel:hover {
+            background-color: rgb(0, 132, 205);
+        }
+        .Intel p, h1, h2{
+            margin-left: 1%;
         }
         .Amd {
             background-color: rgb(255, 123, 0);
             color: rgb(153, 0, 0);
-            font-size: 20px;
+            font-size: 110%;
             margin-left: 10%;
             margin-right: 10%;
             border: 5px solid rgb(134, 0, 0);
+            border-radius: 15px;
+            box-shadow: -2px 2px 5px;
+            transition: background-color, 0.5s;
         }
-        .Img {
-            margin-left: 33%;
+        .Amd:hover {
+            background-color: rgb(255, 123, 50);
+        }
+        .Amd p, h1, h2{
+            margin-left: 1%;
+        }
+        .png {
+            border-radius: 10px;
+            box-shadow: -2px 2px 5px;
+            position: relative;
+            float: right;
+            right: 1%;
+            min-width: 5%;
+            min-width: 5%;
+            max-width: 25%;
+            max-width: 25%;
+        }
+        #outro {
+            margin-top: 80px;
+            text-align: center;
+            color: rgb(255, 255, 255);
+            text-shadow: 0px 0px 5px hsl(125, 100%, 30%);
         }
         th, td, table {
             margin-left: auto;
             margin-right: auto;
-            border: 2px solid black;
+            border: 2px solid aqua;
+            box-shadow: 0px 0px 5px;
             border-collapse: collapse;
-            background-color: white;
+            background-color: rgb(43, 43, 43);
+            text-align: center;
+            font-family: courier;
+            color: hsl(125, 100%, 50%);
+            text-shadow: -1px 1px 2px rgb(77, 255, 255);
+        }
+        table {
+            margin-top: 75px;
+            margin-bottom: 200px;
+            width: 75%;
+        }
+        tr {
+            height: 70px;
         }
     </style>
 </head>
-<body style="background-color: rgb(209, 209, 209);">
-    <h1 style="text-align: center;">
+<body>
+    <h1 id="main">
         Processzorok
     </h1>
-    <ul style="margin-left: 33%; margin-right: 35%; background-color: darkgray; font-size: 20px; border-left: 5px solid rgb(87, 87, 87);">
+    <div id="felsorolas">
+    <ul>
         <li>
             Intel i3
         </li>
@@ -63,15 +133,15 @@
             Amd Ryzen 9
         </li>
     </ul>
-    <br>
-    <div class="Img">
-    <img src="Intel.png" width="300" height="200">
-    <img src="Ryzen.png" width="300" height="200">
     </div>
+    <br>
+    
+    
     <div class="Intel">
     <h1>
         Intel
     </h1>
+    <img src="Intel.png" class="png">
         <h2>
             Intel i3
         </h2>
@@ -102,6 +172,7 @@
             <h1>
                 Amd
             </h1>
+            <img src="Ryzen.png" class="png">
                 <h2>
                     Amd Ryzen 3
                 </h2>
@@ -127,21 +198,21 @@
                         Ez a legerősebb mindegyik közül. Ez a legdrágább, viszont legidőtállóbb is.
                     </p>
     </div>
-    <h1>
+    <h1 id="outro">
         Mit jelentenek a betűk a processzorok neveinek végén?
     </h1>
-    <table style="width: 75%;">
-        <tr style="height: 70px;">
+    <table>
+        <tr>
             <th>Betűjel</th>
             <th>K</th>
             <th>X</th>
             <th>U</th>
         </tr>
-        <tr style="height: 70px;">
+        <tr>
             <th>Jelentése</th>
-            <td><b>Intel processzoroknál van, a nagy teljesítményt jelenti.</b></td>
-            <td><b>Intel és Amd processzoroknál jelenik meg, a legmagasabb teljesítményű processzort jelöli.</b></td>
-            <td><b>Amd, illetve Intel processzorú laptopoknál jelenik meg, azt jelenti, hogy energiatakarékos.</b></td>
+            <td>Intel processzoroknál van, a nagy teljesítményt jelenti.</td>
+            <td>Intel és Amd processzoroknál jelenik meg, a legmagasabb teljesítményű processzort jelöli.</td>
+            <td>Amd, illetve Intel processzorú laptopoknál jelenik meg, azt jelenti, hogy energiatakarékos.</td>
         </tr>
     </table>
 </body>
